# IC-GVINS

./: README.md
config/: gvins.yaml  visualization.rviz
ic_gvins/: .clang-format  CMakeLists.txt  package.xml
ic_gvins/ROS/: drawer_rviz.cc  drawer_rviz.h  fusion_ros.cc  fusion_ros.h
ic_gvins/cmake/: FindGlog.cmake
ic_gvins/ic_gvins/: ic_gvins.cc  ic_gvins.h  misc.cc  misc.h
ic_gvins/ic_gvins/common/: angle.h  earth.h  gpstime.h  logging.h  rotation.h  timecost.h  types.h
ic_gvins/ic_gvins/factors/: gnss_factor.h  marginalization_factor.h  marginalization_info.h  pose_parameterization.h  reprojection_factor.h  residual_block_info.h
ic_gvins/ic_gvins/fileio/: filebase.h  fileloader.cc  fileloader.h  filesaver.cc  filesaver.h
ic_gvins/ic_gvins/preintegration/: imu_error_factor.h  imu_mix_prior_factor.h  imu_pose_prior_factor.h  integration_state.h  preintegration.h  preintegration_base.cc  preintegration_base.h  preintegration_earth.cc  preintegration_earth.h  preintegration_earth_odo.cc  preintegration_earth_odo.h  preintegration_factor.h  preintegration_normal.cc  preintegration_normal.h  preintegration_odo.cc  preintegration_odo.h
ic_gvins/ic_gvins/tracking/: camera.cc  camera.h  drawer.cc  drawer.h  feature.h  frame.cc  frame.h  map.cc  map.h  mappoint.cc  mappoint.h  tracking.cc  tracking.h
ic_gvins/launch/: ic_gvins.launch
scripts/: show_extrinsic.py  show_statistics.py  show_tracking.py
